#------------------------------------------------------------------------------
# Copyright (c) Acoular Development Team.
#------------------------------------------------------------------------------

[project]
name = "spectacoular"
dynamic = ["version"]
description = "Library for SpectAcoular interactive applications with Acoular"
requires-python = ">=3.11,<3.15"
authors = [
    {name = "Acoular Development Team", email = "info@acoular.org"},
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "acoustics",
    "beamforming",
    "microphone array",
    "GUI"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    'acoular>=26.01',
    'bokeh >=3.0',
]

maintainers = [
    {name = "Adam Kujawski", email = "adam.kujawski@tu-berlin.de"},
    {name = "Art Pelling", email = "a.pelling@tu-berlin.de"},
    {name = "Ennes Sarradj", email = "ennes.sarradj@tu-berlin.de"},
    {name = "Gert Herold", email = "gert.herold@tu-berlin.de"},
    {name = "Mikolaj Czuchaj", email = "mikolaj.czuchaj@tu-berlin.de"},
    {name = "Simon Jekosch", email = "s.jekosch@tu-berlin.de"},
]


[project.optional-dependencies]
full = [
    "opencv-python", # only for msm_app
    "sounddevice",
]

tapy = [
    "spectacoular[full]",
    "tapy"
]

[dependency-groups]
docs = [
    "ipython",
    "graphviz",
    "matplotlib",
    "numpydoc",
    "pickleshare",
    "sphinx",
    "sphinx_gallery",
]

lint = ["ruff==0.14.2"]

tests = [
    "diff_cover",
    "pytest",
    "pytest-cov",
    "hypothesis",
    "spectacoular[full]",
]

dev = [
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "tests"},
]

[project.scripts]
micgeom_app = "spectacoular.apps.micgeom:main"
msm_app = "spectacoular.apps.measurement:main"
bf_example_app = "spectacoular.apps.bf_example:main"
rotating_example_app = "spectacoular.apps.rotating_example:main"
level_meter_app = "spectacoular.apps.level_meter:main"
data_viewer_app = "spectacoular.apps.data_viewer:main"

[project.urls]
homepage = "https://acoular.github.io/spectacoular/"
documentation = "https://acoular.github.io/spectacoular/"
repository = "https://github.com/acoular/spectacoular"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/spectacoular/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/spectacoular"]


[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true


[tool.uv.sources]
# for a different branch use: uv add git+ssh://git@git.tu-berlin.de/akustik/tapy.git --branch=main
tapy = { git = "ssh://git@git.tu-berlin.de/akustik/tapy.git", branch = "dev" }


[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-v --durations=10 --cov-report=html --cov-report=term-missing"
filterwarnings = [
    # Suppress warnings about unclosed files in tables at the end of the tests
    "ignore:Closing remaining open file*:tables.exceptions.UnclosedFileWarning",
]
